server/vm-k8s/k8s/base/matomo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matomo
  name: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  strategy: {}
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
      - image: matomo:5.0-apache
        name: matomo
        resources: {}
status: {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matomo-mysql
spec:
  selector:
    matchLabels:
      app: matomo-mysql
  serviceName: "matomo-mysql"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: matomo-mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql:5.7
        args:
        - --sort_buffer_size=2M
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: 64M
          limits:
            memory: 380M
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "microk8s-hostpath"
      resources:
        requests:
          storage: 1Gi
