server/vm-k8s/k8s/base/matomo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  labels:
    app: matomo
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: matomo
---
apiVersion: v1
kind: Service
metadata:
  name: matomo-mysql
  labels:
    app: matomo-mysql
spec:
  ports:
  - port: 3306
    name: matomo
  clusterIP: None
  selector:
    app: matomo-mysql
