server/vm-k8s/k8s/base/matomo/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matomo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`matomo.10.0.2.15.nip.io`)
      services:
        - kind: Service
          name: matomo
          port: 80
      middlewares:
        - name: add-x-forwarded-proto
  tls:
    certResolver: myresolver
